handle jwt authentication and refreshtokens with correcting logs flows and implment api response model and configure data enryptoin for routes, add health check endpoint and configure it

--- a/Rafeek.Application/Localization/Messages.ar.resx
+++ b/Rafeek.Application/Localization/Messages.ar.resx
@@ -131,4 +131,9 @@
 	<data name="UnknownExceptionMessage" xml:space="preserve">
 	<value>حدث خطأ غير معروف.</value>
   </data>
+
+	<data name="TokenNotValid" xml:space="preserve">
+	<value>التوكن غير صالح.</value>
+  </data>
+
 </root>
