implmeent signup endpoint

--- a/Rafeek.Application/Localization/Messages.ar.resx
+++ b/Rafeek.Application/Localization/Messages.ar.resx
@@ -1,139 +1,222 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
-	<xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-		<xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-		<xsd:element name="root" msdata:IsDataSet="true">
-			<xsd:complexType>
-				<xsd:choice maxOccurs="unbounded">
-					<xsd:element name="metadata">
-						<xsd:complexType>
-							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" />
-							</xsd:sequence>
-							<xsd:attribute name="name" use="required" type="xsd:string" />
-							<xsd:attribute name="type" type="xsd:string" />
-							<xsd:attribute name="mimetype" type="xsd:string" />
-							<xsd:attribute ref="xml:space" />
-						</xsd:complexType>
-					</xsd:element>
-					<xsd:element name="assembly">
-						<xsd:complexType>
-							<xsd:attribute name="alias" type="xsd:string" />
-							<xsd:attribute name="name" type="xsd:string" />
-						</xsd:complexType>
-					</xsd:element>
-					<xsd:element name="data">
-						<xsd:complexType>
-							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-								<xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-							</xsd:sequence>
-							<xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-							<xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-							<xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-							<xsd:attribute ref="xml:space" />
-						</xsd:complexType>
-					</xsd:element>
-					<xsd:element name="resheader">
-						<xsd:complexType>
-							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-							</xsd:sequence>
-							<xsd:attribute name="name" type="xsd:string" use="required" />
-						</xsd:complexType>
-					</xsd:element>
-				</xsd:choice>
-			</xsd:complexType>
-		</xsd:element>
-	</xsd:schema>
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
 
-	<resheader name="resmimetype">
-		<value>text/microsoft-resx</value>
-	</resheader>
-	<resheader name="version">
-		<value>2.0</value>
-	</resheader>
-	<resheader name="reader">
-		<value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-	</resheader>
-	<resheader name="writer">
-		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-	</resheader>
-
-	<data name="PlaceNotValid" xml:space="preserve">
-	<value>مكان الملف غير صالح.</value>
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
+  <resheader name="resmimetype">
+    <value>text/microsoft-resx</value>
+  </resheader>
+  <resheader name="version">
+    <value>2.0</value>
+  </resheader>
+  <resheader name="reader">
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <resheader name="writer">
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <data name="PlaceNotValid" xml:space="preserve">
+    <value>مكان الملف غير صالح.</value>
   </data>
-
-	<data name="PlaceNotSupported" xml:space="preserve">
-	<value>الملف غير مدعوم.</value>
+  <data name="PlaceNotSupported" xml:space="preserve">
+    <value>الملف غير مدعوم.</value>
   </data>
-
-	<data name="FilePalceNotValid" xml:space="preserve">
-	<value>مكان الملف غير صالح.</value>
+  <data name="FilePalceNotValid" xml:space="preserve">
+    <value>مكان الملف غير صالح.</value>
   </data>
-
-	<data name="FileNotFound" xml:space="preserve">
-	<value>الملف غير موجود.</value>
+  <data name="FileNotFound" xml:space="preserve">
+    <value>الملف غير موجود.</value>
   </data>
-
-	<data name="FileNameRequried" xml:space="preserve">
-	<value>اسم الملف مطلوب.</value>
+  <data name="FileNameRequried" xml:space="preserve">
+    <value>اسم الملف مطلوب.</value>
   </data>
-
-	<data name="FileNotValid" xml:space="preserve">
-	<value>الملف ليس من الامتداد الصحيح أو غير موجود.</value>
+  <data name="FileNotValid" xml:space="preserve">
+    <value>الملف ليس من الامتداد الصحيح أو غير موجود.</value>
   </data>
-
-	<data name="FileUploadFailed" xml:space="preserve">
-	<value>فشل رفع الملف.</value>
-	</data>
-
-	<data name="FaildToDeleted" xml:space="preserve">
-	<value>فشل إزالة الملف.</value>
-	</data>
-
-	<data name="OkActionResultMessage" xml:space="preserve">
-	<value>تم تنفيذ العملية بنجاح.</value>
+  <data name="FileUploadFailed" xml:space="preserve">
+    <value>فشل رفع الملف.</value>
   </data>
-
-	<data name="CreatedActionResultMessage" xml:space="preserve">
-	<value>تم الإنشاء بنجاح.</value>
+  <data name="FaildToDeleted" xml:space="preserve">
+    <value>فشل إزالة الملف.</value>
   </data>
-
-	<data name="AcceptedActionResultMessage" xml:space="preserve">
-	<value>تم قبول الطلب بنجاح.</value>
+  <data name="OkActionResultMessage" xml:space="preserve">
+    <value>تم تنفيذ العملية بنجاح.</value>
   </data>
-
-	<data name="DeletedActionResultMessage" xml:space="preserve">
-	<value>تم الحذف بنجاح.</value>
+  <data name="CreatedActionResultMessage" xml:space="preserve">
+    <value>تم الإنشاء بنجاح.</value>
   </data>
-
-	<data name="ValidationExceptionMessage" xml:space="preserve">
-	<value>حدث استثناء في التحقق.</value>
+  <data name="AcceptedActionResultMessage" xml:space="preserve">
+    <value>تم قبول الطلب بنجاح.</value>
   </data>
-
-	<data name="InvalidModelStateExceptionMessage" xml:space="preserve">
-	<value>حالة النموذج غير صالحة.</value>
+  <data name="DeletedActionResultMessage" xml:space="preserve">
+    <value>تم الحذف بنجاح.</value>
   </data>
-
-	<data name="NotFoundExceptionMessage" xml:space="preserve">
-	<value>المورد المطلوب غير موجود.</value>
+  <data name="ValidationExceptionMessage" xml:space="preserve">
+    <value>حدث استثناء في التحقق.</value>
   </data>
-
-	<data name="BadRequestExceptionMessage" xml:space="preserve">
-	<value>طلب غير صالح.</value>
+  <data name="InvalidModelStateExceptionMessage" xml:space="preserve">
+    <value>حالة النموذج غير صالحة.</value>
   </data>
-
-	<data name="UnauthorizedExceptionMessage" xml:space="preserve">
-	<value>دخول غير مصرح به.</value>
+  <data name="NotFoundExceptionMessage" xml:space="preserve">
+    <value>المورد المطلوب غير موجود.</value>
   </data>
-
-	<data name="UnknownExceptionMessage" xml:space="preserve">
-	<value>حدث خطأ غير معروف.</value>
+  <data name="BadRequestExceptionMessage" xml:space="preserve">
+    <value>طلب غير صالح.</value>
   </data>
-
-	<data name="TokenNotValid" xml:space="preserve">
-	<value>التوكن غير صالح.</value>
+  <data name="UnauthorizedExceptionMessage" xml:space="preserve">
+    <value>دخول غير مصرح به.</value>
   </data>
-
+  <data name="UnknownExceptionMessage" xml:space="preserve">
+    <value>حدث خطأ غير معروف.</value>
+  </data>
+  <data name="TokenNotValid" xml:space="preserve">
+    <value>التوكن غير صالح.</value>
+  </data>
+  <data name="InvalidSignIn" xml:space="preserve">
+    <value>الايميل او كلمة المرور غير صالحة.</value>
+  </data>
+  <data name="NationalNumberExist" xml:space="preserve">
+    <value>الرقم القومي محجوز بالفعل.</value>
+  </data>
+  <data name="PhoneNumberExist" xml:space="preserve">
+    <value>رقم الهاتف محجوز بالفعل.</value>
+  </data>
+  <data name="UserCodeExist" xml:space="preserve">
+    <value>حقل كلمة السر مطلوب.</value>
+  </data>
+  <data name="PhoneInvalid" xml:space="preserve">
+    <value>رقم الهاتف غير صالح</value>
+  </data>
+  <data name="EmailInvalid" xml:space="preserve">
+    <value>الايميل غير صالح.</value>
+  </data>
+  <data name="EmailAlreadyExistedbefore" xml:space="preserve">
+    <value>المستخدم موجود بالفعل</value>
+  </data>
+  <data name="GenderIsNotValid" xml:space="preserve">
+    <value>الجنس غير صالح.</value>
+  </data>
+  <data name="PasswordRequired" xml:space="preserve">
+    <value>كلمة السر مطلوبة</value>
+  </data>
+  <data name="PasswordValid" xml:space="preserve">
+    <value>كلمة السر اما ضعيفة أو قد لا تستوفي المعايير المطلوبة.</value>
+  </data>
+  <data name="PasswordConfirmNotEqual" xml:space="preserve">
+    <value>حقل تاكيد كلمة السر لايتطابق مع حقل كلمة السر.</value>
+  </data>
+  <data name="FullNameRequired" xml:space="preserve">
+    <value>الاسم مطلوب.</value>
+  </data>
+  <data name="PhoneRequired" xml:space="preserve">
+    <value>رقم الهاتف مطلوب.</value>
+  </data>
+  <data name="EmailRequired" xml:space="preserve">
+    <value>الايميل مطلوب.</value>
+  </data>
+  <data name="NationalNumberRequired" xml:space="preserve">
+    <value>الرقم القومي مطلوب.</value>
+  </data>
 </root>
